--- a/css/Mocar.css
+++ b/css/Mocar.css
@@ -332,7 +332,7 @@ a:hover, a:active, a:focus {
 }
 
 #home .home-img {
-  background: url('../images/home-img.jpg?v=2') no-repeat;
+  background: url('../images/home-img.jpg') no-repeat;
   background-size: cover;
   background-position: 50% 50%;
   width: 100%;
@@ -356,7 +356,7 @@ a:hover, a:active, a:focus {
 
 
 #about .about-img {
-    background: url('../images/about-img.jpg?v=2') no-repeat;
+    background: url('../images/about-img.jpg') no-repeat;
 }
 
 #about .about-thumb,
@@ -407,7 +407,7 @@ a:hover, a:active, a:focus {
 
 
 #experience .experience-img {
-  background: url('../images/experience-img.jpg?v=2') no-repeat;
+  background: url('../images/experience-img.jpg') no-repeat;
 }
 
 #experience .media-heading {
@@ -430,7 +430,7 @@ a:hover, a:active, a:focus {
 }
 
 #education .education-img {
-  background: url('../images/education-img.jpg?v=2') no-repeat;
+  background: url('../images/education-img.jpg') no-repeat;
 }
 
 #education .media-heading {
@@ -450,7 +450,7 @@ a:hover, a:active, a:focus {
 
 
 #quotes {
-    background: url('../images/quotes-bg.jpg?v=2') 50% 0 repeat-y fixed;
+    background: url('../images/quotes-bg.jpg') 50% 0 repeat-y fixed;
     background-size: cover;
     background-position: center center;
     color: #ffffff;
@@ -490,7 +490,7 @@ a:hover, a:active, a:focus {
 }
 
 #contact .contact-img {
-  background: url('../images/contact-img.jpg?v=2') no-repeat;
+  background: url('../images/contact-img.jpg') no-repeat;
   min-height: 75vh;
 }
 
